Added new testimonials

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>VaRanjith - Design is passion | Code is poetry</title>
+  <title>Ranjith Varatharajan - Design is passion | Code is poetry</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="VaRanjith - Design is passion | Code is poetry">
-  <meta name="keywords" content="varanjith, angular, portfolio">
-  <meta name="author" content="Va Ranjith">
+  <meta name="description" content="Ranjith Varatharajan - Design is passion | Code is poetry">
+  <meta name="keywords" content="Ranjith Varatharajan, angular, portfolio">
+  <meta name="author" content="Ranjith Varatharajan">
   <meta name="theme-color" content="#1755cf" />
 </head>
 
